<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".fragment.DosenFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:id="@+id/user_profile">

        <ImageView
            android:id="@+id/user5"
            android:src="@drawable/user_icon_black"
            android:layout_width="90dp"
            android:layout_height="90dp"
            />

        <TextView
            android:id="@+id/nama_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lorem"
            android:textSize="19sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:textColor="@color/white" />


        <TextView
            android:id="@+id/id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/lorem"
            android:textSize="12sp"
            android:layout_gravity="center"
            android:textColor="@color/white" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/user_profile"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tablayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white"
                app:tabSelectedTextColor="@color/black"
                app:tabTextColor="@color/black">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tabList_booking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/list_booking" />

            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/viewPager"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />


        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>