<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="280dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <ImageView
                android:id="@+id/iv_logo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/logiin" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/email"
                    android:ems="10"
                    tools:ignore="Autofill"
                    android:letterSpacing="0.1"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:hint="E-mail"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:drawableLeft="@drawable/lock"
                    android:hint="Password"
                    android:ems="10"
                    tools:ignore="Autofill"
                    android:letterSpacing="0.1"
                    android:drawablePadding="15dp"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:inputType="textPassword" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

    </RelativeLayout>


    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:background="@drawable/background_profile"
        android:elevation="4dp"
        android:src="@drawable/home" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="530dp"
        android:layout_marginRight="80dp"
        android:background="@drawable/gradient_btn"
        android:text="LOGIN"
        android:textSize="20dp"
        android:textAllCaps="false"
        android:textColor="@color/white" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/LupaPass"
        android:layout_below="@+id/btnLogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="45dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:letterSpacing="0.1"
        android:text="@string/lupa_password"
        android:onClick="resset"
        android:textColor="@color/bluecolor"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/LupaPass"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/txt"
            android:textColor="@color/gray"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:letterSpacing="0.1"
            android:text="@string/belum_punya_akun" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:letterSpacing="0.1"
            android:textStyle="bold"
            android:textColor="@color/bluecolor"
            android:onClick="signup"
            android:text="@string/sign_up" />
    </LinearLayout>

</RelativeLayout>