<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".fragment.AddDosenFragment">

<!--    <ImageView-->
<!--        android:id="@+id/back"-->
<!--        android:layout_alignParentLeft="true"-->
<!--        android:src="@drawable/back2"-->
<!--        android:onClick="btnback3"-->
<!--        android:layout_width="62dp"-->
<!--        android:layout_height="62dp"/>-->


<!--    <ImageView-->
<!--        android:id="@+id/user"-->
<!--        android:src="@drawable/user_icon__foreground"-->
<!--        android:layout_width="100dp"-->
<!--        android:layout_height="100dp"-->
<!--        android:layout_alignParentRight="true"-->
<!--        android:layout_alignParentEnd="true"/>-->

    <TextView
        android:id="@+id/label_addNote"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30sp"
        android:layout_below="@+id/user"
        android:layout_marginTop="70sp"
        android:text="@string/add"
        android:textColor="@color/orange"
        android:textSize="19sp"
        android:textStyle="bold"/>


    <androidx.core.widget.NestedScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        android:layout_below="@+id/label_addNote"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <com.prolificinteractive.materialcalendarview.MaterialCalendarView
                android:id="@+id/calendarView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:mcv_showOtherDates="all"
                app:mcv_selectionColor="@color/orange" />


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:id="@+id/available"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_start"
                        android:text="Start"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:drawablePadding="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_timer_start"
                        android:hint="Select Time"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:drawablePadding="16dp"
                        android:background="@android:drawable/editbox_background"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="180dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_end"
                        android:text="End"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:drawablePadding="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_timer_end"
                        android:hint="Select Time"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:drawablePadding="16dp"
                        android:background="@android:drawable/editbox_background"/>

                </LinearLayout>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="65dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/note_agenda"
                    android:hint="Agenda"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:drawablePadding="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/note_location"
                    android:layout_below="@id/note_agenda"
                    android:hint="Location"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:drawablePadding="16dp" />


                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/note_text"
                    android:layout_below="@id/note_location"
                    android:hint="Note"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:drawablePadding="16dp" />


                <Button
                    android:id="@+id/btnAdd"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentBottom="true"
                    android:background="@drawable/gradient_btn"
                    android:layout_marginTop="10dp"
                    android:text="@string/btnAdd"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/blue" />

                <Button
                    android:id="@+id/btnCencelNote"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentBottom="true"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/gradient_btn_white"
                    android:text="@string/btnCencel"
                    android:textSize="20dp"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="@color/blue" />

            </RelativeLayout>




        </LinearLayout>

    </androidx.core.widget.NestedScrollView>



</RelativeLayout>