<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background1"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".fragment.AddFragment">


    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="80dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/gradient_background"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="20dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:orientation="vertical"
            android:paddingTop="30dp">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:background="@drawable/gradient_blue"
                android:elevation="4dp"
                android:paddingTop="12dp">

                <TextView
                    android:id="@+id/label_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/aturStatus"
                    android:layout_marginLeft="83dp"
                    android:textSize="19sp"
                    android:textStyle="bold"
                    android:layout_gravity="center_horizontal"
                    android:textColor="@color/white" />
            </RelativeLayout>

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available"
                    android:id="@+id/radioA"
                    android:textColor="@color/green"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center"/>

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/notAvailable"
                    android:id="@+id/radioNA"
                    android:layout_marginLeft="13dp"
                    android:textColor="@color/red"
                    android:layout_gravity="center"/>

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textPilih"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="20dp"/>


            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="260dp"
                android:id="@+id/available"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_tv_timer"
                        android:hint="Mulai"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:drawablePadding="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_timer"
                        android:hint="Select Time"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:textColor="@android:color/black"
                        android:gravity="center"
                        android:drawablePadding="16dp"
                        android:background="@android:drawable/editbox_background"/>
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="180dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/name_name_tv_timer2"
                        android:hint="Sampai"
                        android:textSize="16sp"
                        android:gravity="center"
                        android:drawablePadding="16dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_timer2"
                        android:hint="Select Time"
                        android:textSize="16sp"
                        android:textColor="@android:color/black"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:drawablePadding="16dp"
                        android:background="@android:drawable/editbox_background"/>

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="70dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/lokasi"
                    android:hint="Lokasi"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:drawablePadding="16dp" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="90dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pesan_lokasi"
                    android:hint="Isi Lokasi"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:drawablePadding="16dp"
                    android:background="@android:drawable/editbox_background"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="140dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pesan"
                    android:hint="Pesan"
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:gravity="center"
                    android:drawablePadding="16dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="160dp"
                    android:layout_marginLeft="10dp"
                    android:id="@+id/pesan_text"
                    android:hint="Saya available dari jam 12 siang sampai jam 3 sore. Diluar jam itu saya sedang ada agenda dan jadwal sesuai dengan waktu saya. Terimakasih."
                    android:textSize="16sp"
                    android:textColor="@color/blue"
                    android:drawablePadding="16dp"
                    android:background="@android:drawable/editbox_background"/>

            </RelativeLayout>



        </LinearLayout>

    </ScrollView>

        <Button
            android:id="@+id/btnAtur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="520dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/gradient_btn"
            android:text="Atur Sekarang"
            android:textSize="20dp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:textColor="@color/white" />

    </RelativeLayout>

    <ImageButton
        android:id="@+id/user_profile_photo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:background="@drawable/background_profile"
        android:elevation="4dp"
        android:src="@drawable/vector" />

</RelativeLayout>